<resources>
    <string name="app_name">Barcode_v.1.3</string>


    <!-- This is for searching page -->
    <string name="chk_alcohol">Alcohol</string>
    <string name="chk_pork">Pork</string>
    <string name="chk_veggie">Vegetarian</string>
    <string name="chk_beef">Beef</string>
    <string name="chk_halalb">Halal beef</string>
    <string name="chk_seafood">Seafood</string>
    <string name="btn_display">Display</string>

    <string name="action_settings">Settings</string>
    <string name="barcode_edit_message">Search by barcode</string>
    <string name="name_edit_message">Search by product name</string>
    <string name="button_barcode">Search</string>
    <string name="button_name">Search</string>
    <string name="button_checkbox">Checkboxes</string>

    <!-- this is for main_activity page -->
    <string name="scan_barcode">Barcode</string>
    <string name="scan_search">Searching</string>
    <string name="scan_information">Information</string>
    <string name="scan_help">Help</string>

    <!-- this is for contact us section -->
    <string name="contact_us">Contact Us</string>
    <string name="input_your_name">namamu</string>
    <string name="namamu">Name</string>
    <string name="address">Address</string>
    <string name="comment">Comment</string>
    <string name="type_comment">Write here</string>
    <string name="send_comment">Send</string>

</resources>
