<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText android:id="@+id/barcode_edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/barcode_edit_message" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_barcode"
        android:onClick="searchByBarcode"/>

    <EditText android:id="@+id/name_edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/name_edit_message" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name"
        android:onClick="searchByName"/>

    <CheckBox
        android:id="@+id/chkAlcohol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_alcohol" />


    <CheckBox
        android:id="@+id/chkPork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_pork" />

    <CheckBox
        android:id="@+id/chkVeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_veggie" />

    <CheckBox
        android:id="@+id/chkBeef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_beef" />

    <CheckBox
        android:id="@+id/chkHalalB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_halalb" />

    <CheckBox
        android:id="@+id/chkSea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chk_seafood" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_checkbox"
        android:onClick="searchByCheckbox"/>
</LinearLayout>
