<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.newstudent.barcode_v13.Help">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/texthelp1"
        android:text="@string/contact_us"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_centerHorizontal="true"/>


    <EditText
        android:inputType="text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edithelp1"
        android:text="@string/input_your_name"
        android:layout_below="@+id/texthelp1"
        android:layout_toRightOf="@+id/nama"
        android:layout_toEndOf="@+id/nama"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namamu"
        android:id="@+id/nama"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_alignBaseline="@+id/edithelp1"
        android:layout_alignBottom="@+id/edithelp1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edithelp2"
        android:text="@string/address"
        android:layout_below="@+id/edithelp1"
        android:layout_toRightOf="@+id/nama"
        android:layout_toEndOf="@+id/nama"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:id="@+id/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_alignBaseline="@+id/edithelp2"
        android:layout_alignBottom="@+id/edithelp2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/comment"
        android:text="@string/comment"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="20sp"/>

    <EditText
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textcomment"
        android:layout_below="@+id/comment"
        android:text="@string/type_comment"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendButton"
        android:layout_below="@+id/textcomment"
        android:text="@string/send_comment"
        android:layout_centerInParent="true"/>

</RelativeLayout>
